# tutor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  azure.yaml  main.tf  package-lock.json  package.json  pyproject.toml  ruff.toml
.azure/: deployment-plan.md
.conf/: environment.ps1
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: cataldi-librarian.agent.md  platform-quality.agent.md  report-generator.agent.md  tech-manager.agent.md
.github/instructions/: team-mapping.instructions.md
.github/prompts/: azure-architecture-review.prompt.md  azure-cost-optimize.prompt.md  azure-migrate.prompt.md  azure-troubleshoot.prompt.md  codebase-onboarding.prompt.md  connector-audit.prompt.md  connector-design.prompt.md  migration-plan.prompt.md  platform-cicd-audit.prompt.md  platform-dependency-audit.prompt.md  platform-quality-evaluation.prompt.md  pr-review.prompt.md  python-implement.prompt.md  python-refactor.prompt.md  python-review.prompt.md  rust-implement.prompt.md  rust-review.prompt.md  security-audit.prompt.md  ship-deploy-hotfix.prompt.md  tech-debt-assessment.prompt.md  tech-lead-document-architecture.prompt.md  tech-lead-innovation-research.prompt.md  tech-lead-investigate.prompt.md  tech-lead-issue-correction.prompt.md  tech-lead-issue-execute.prompt.md  tech-lead-plan.prompt.md  typescript-implement.prompt.md  typescript-review.prompt.md  ui-accessibility-audit.prompt.md  ui-design-component.prompt.md
.github/workflows/: aca-recovery.yml  azd-deploy.yml  azure-static-web-apps-polite-wave-029b18f0f.yml  codeql.yml
.py-conf/: conf-env.ps1
apps/avatar/: dockerfile  pyproject.toml
apps/chat/: README.md  dockerfile  pyproject.toml
apps/chat/src/app/: main.py
apps/configuration/: dockerfile  pyproject.toml
apps/essays/: README.md  dockerfile  pyproject.toml
apps/essays/app/: cosmos_crud.py  essays.py  main.py  plugins.py  schemas.py
apps/essays/app/agents/: __init__.py  clients.py
apps/essays/app/prompts/: correct.jinja
apps/essays/src/: README.md
apps/essays/src/app/: config.py  cosmos.py  essays.py  file_processing.py  main.py  plugins.py  schemas.py
apps/essays/src/app/agents/: __init__.py  clients.py  tooling.py
apps/essays/src/app/demo/: evaluate_essays.py
apps/essays/src/app/prompts/: correct.jinja  instruction.jinja
apps/evaluation/: README.md  dockerfile  pyproject.toml
apps/insights/: README.md  dockerfile  pyproject.toml
apps/lms-gateway/: README.md  dockerfile  pyproject.toml
apps/questions/: README.md  dockerfile  pyproject.toml
apps/upskilling/: README.md  dockerfile  pyproject.toml
docs/: README.md  agent-evaluation.md  architecture.md  business-alignment.md  infrastructure.md  local-development.md  modernization-plan.md  security.md  service-domains.md  solution-overview.md  standalone-lifelong-learning-innovation-brief.md  standalone-lifelong-learning-issue-backlog.md  standalone-lifelong-learning-risk-assessment.md  standalone-lifelong-learning-ux-ia.md
docs/adr/: 001-lms-enhancer-platform.md  002-shared-library.md  003-aca-microservices.md  004-terraform-avm.md  005-foundry-evaluation.md  006-domain-decoupling.md  007-frontend-modernization.md  008-security-layers.md  009-supervisor-fabric-integration.md  010-pedagogical-content-ocr.md  011-foundry-first-agent-architecture.md  012-cosmos-foundry-agent-migration.md  013-learner-record-standalone-platform.md  014-hybrid-learner-record-service-bus-distribution.md  README.md
docs/runbooks/: azd-deployment.md  incremental-infra-provisioning.md  reviewer-checklist.md
frontend/: .swaignore  README.md  biome.json  jsvectormap.d.ts  next_function.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  process.env  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CardDataStats.tsx  ClickOutside.tsx
frontend/css/: satoshi.css  style.css
frontend/hooks/: useQuestionsAnswers.ts  useQuestionsGraders.ts
frontend/types/: answer.ts  api.ts  assembly.ts  cases.ts  chatResponse.ts  essays.ts  grader.ts  manager.ts  message.ts  profile.ts  question.ts  questionEvaluation.ts  rules.ts  specialist.ts  steps.ts  theme.ts  transcription.ts
frontend/utils/: api.ts  humanEvalContext.tsx  transcriptionContext.tsx  workspace-api.ts  workspace.ts
infra/: main.bicep
infra/modules/: aca.bicep  acr.bicep  cosmos.bicep  loga.bicep  staticwapp.bicep  vnet.bicep
infra/terraform/: .terraform.lock.hcl  README.md  backend.hcl.sample  main.tf  main.tfvars.json  outputs.tf  provider.conf.json  providers.tf  terraform.tfvars.sample  variables.tf
lib/: README.md  pyproject.toml
lib/src/tutor_lib/: __init__.py
lib/src/tutor_lib/agents/: __init__.py  clients.py  tooling.py
lib/src/tutor_lib/config/: __init__.py  app_factory.py  settings.py
lib/src/tutor_lib/cosmos/: __init__.py  assemblies.py  client.py  crud.py
lib/src/tutor_lib/learner_record/: __init__.py  models.py  publishing.py  repository.py
lib/src/tutor_lib/middleware/: __init__.py  auth.py
lib/src/tutor_lib/schemas/: __init__.py  envelope.py
scripts/: deprovision-environment.ps1  seed_demo_data.py
src/: .env.sample
src/avatar/: README.md
src/avatar_engine/: package.json  pyproject.toml
src/configuration/: README.md
src/frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
tests/avatar/: test_avatar_interactions_api.py
tests/chat/: test_chat_api.py
tests/configuration/: test_configuration_api.py
tests/essays/: test_essays_orchestrator.py  test_file_processing.py
tests/evaluation/: test_evaluation_api.py
tests/insights/: test_insights_api.py
tests/questions/: conftest.py  (+1 more)
(+263 files in other folders)
